@@ -3,6 +3,8 @@
 
 - group.remote_exec now supports *kwargs as well
 
+- Popen2IO.read now reads correct amounts of bytes from nonblocking fd's
+
 - added a ``dont_write_bytecode`` option to Popen gateways, this sets the
   ``sys.dont_write_bytecode`` flag on the spawned process, this only works on
   CPython 2.6 and higher.  Thanks to Alex Gaynor.
